# notebooks

./: pyproject.toml
notebooks/: Getting_started_with_google_colab_ai.ipynb
src/demo/: agent.py
src/lang_chain/: config.py  llm.py
src/notebook/: agent-01.ipynb  calculator_agent .ipynb  config.ipynb  demo.ipynb  graph-01.ipynb
